[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/icon.png" type="Texture" id=1]
[ext_resource path="res://Game Scenes/Dropper/Catcher.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 103.809 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35.9087, 157.243 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 98.5924, 104.483 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 69.3228, 94.1426 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 114.56, 98.9388 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 115.474, 100.849 )

[node name="Catcher" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 0.159288, 0.257282 )
scale = Vector2( 0.297509, 3.27196 )

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -0.535406, -0.0786324 )
scale = Vector2( 3.36125, 0.305627 )
shape = SubResource( 1 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2( 215.068, -2.4124 )
scale = Vector2( 0.297509, 3.27196 )

[node name="Sprite" type="Sprite" parent="StaticBody2D3"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2( -0.535406, -0.0786324 )
scale = Vector2( 3.36125, 0.305627 )
shape = SubResource( 1 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2( 373.914, -5.08207 )
scale = Vector2( 0.297509, 3.27196 )

[node name="Sprite" type="Sprite" parent="StaticBody2D4"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2( -0.535406, -0.0786324 )
scale = Vector2( 3.36125, 0.305627 )
shape = SubResource( 1 )

[node name="StaticBody2D5" type="StaticBody2D" parent="."]
position = Vector2( 623.529, -5.08207 )
scale = Vector2( 0.297509, 3.27196 )

[node name="Sprite" type="Sprite" parent="StaticBody2D5"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D5"]
position = Vector2( -0.535406, -0.0786324 )
scale = Vector2( 3.36125, 0.305627 )
shape = SubResource( 1 )

[node name="StaticBody2D6" type="StaticBody2D" parent="."]
position = Vector2( 779.706, -6.41691 )
scale = Vector2( 0.297509, 3.27196 )

[node name="Sprite" type="Sprite" parent="StaticBody2D6"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D6"]
position = Vector2( -0.535406, -0.0786324 )
scale = Vector2( 3.36125, 0.305627 )
shape = SubResource( 1 )

[node name="StaticBody2D7" type="StaticBody2D" parent="."]
position = Vector2( 1030.66, -5.08207 )
scale = Vector2( 0.297509, 3.27196 )

[node name="Sprite" type="Sprite" parent="StaticBody2D7"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D7"]
position = Vector2( -0.535406, -0.0786324 )
scale = Vector2( 3.36125, 0.305627 )
shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 525.024, 92.8509 )
rotation = -1.57089
scale = Vector2( 0.297509, 3.27196 )

[node name="Sprite" type="Sprite" parent="StaticBody2D2"]
position = Vector2( 0, 0.359202 )
scale = Vector2( 1, 4.92305 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 109.44, -0.561234 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2.24493, 0 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="Area2D"]
margin_left = -28.3162
margin_top = -6.13519
margin_right = 11.6838
margin_bottom = 7.86481
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 118.44, -2.56123 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 175.836, -8.56462 )
shape = SubResource( 4 )

[node name="Label" type="Label" parent="Area2D2"]
margin_left = 161.516
margin_top = -4.67194
margin_right = 201.516
margin_bottom = 9.32806
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2( 109.44, -0.561234 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 388.5, -7.5 )
shape = SubResource( 5 )

[node name="Label" type="Label" parent="Area2D3"]
margin_left = 367.081
margin_top = -8.67647
margin_right = 407.081
margin_bottom = 5.32353
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D4" type="Area2D" parent="."]
position = Vector2( 118.44, -2.56123 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
position = Vector2( 582.977, -9.45552 )
shape = SubResource( 4 )

[node name="Label" type="Label" parent="Area2D4"]
margin_left = 566.639
margin_top = -3.33711
margin_right = 606.639
margin_bottom = 10.6629
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D5" type="Area2D" parent="."]
position = Vector2( 109.44, -0.561234 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D5"]
position = Vector2( 795.321, -2.98728 )
shape = SubResource( 6 )

[node name="Label" type="Label" parent="Area2D5"]
margin_left = 777.741
margin_top = -8.32443
margin_right = 817.741
margin_bottom = 5.67557
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_Area2D3_body_entered"]
[connection signal="body_entered" from="Area2D4" to="." method="_on_Area2D4_body_entered"]
[connection signal="body_entered" from="Area2D5" to="." method="_on_Area2D5_body_entered"]
